--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,6 @@ services:
     
   db:
     image: mysql:8.0.16
-    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci','--default-authentication-plugin=mysql_native_password']
     ports: 
         - "3306:3306"
     networks:
@@ -56,8 +55,6 @@ services:
           ipv4_address: 192.168.8.4
     environment:
         MYSQL_DATABASE: myDb
-        MYSQL_USER: coda
-        MYSQL_PASSWORD: test
         MYSQL_ROOT_PASSWORD: test
     volumes:
         - ./erp/datas:/docker-entrypoint-initdb.d
@@ -70,20 +67,37 @@ services:
     ports:
         - 8000:80
     environment:
-        MYSQL_USER: coda
-        MYSQL_PASSWORD: test
         MYSQL_ROOT_PASSWORD: test
+        
+  compta:
+    build: ./entreprise/compta/.
+    networks:
+      reseau_entreprise:
+          ipv4_address: 192.168.1.1
+    volumes:
+      - ./entreprise/compta/resolv.conf:/etc/resolv.conf
+    container_name: compta
+    
+    
 volumes:
     persistent:     
+
 
 networks:
 
   interne:
+      driver: bridge
       ipam:
           driver: default
           config:
               - subnet: 192.168.8.0/24
                 gateway:  192.168.8.254
                 
-                
-
+ 
+ 
+  reseau_entreprise:
+      ipam:
+          driver: default
+          config:
+              - subnet: 192.168.1.0/24
+                gateway:  192.168.1.254
