--- a/dmz/soa_externe/Dockerfile
+++ b/dmz/soa_externe/Dockerfile
@@ -6,7 +6,4 @@ RUN apt-get install curl -y
 
 WORKDIR /etc/bind
 COPY named.conf /etc/bind/named.conf
-COPY zone/l1-6.ephecti.be /etc/bind/master/l1-6.ephecti.be
-
-
-EXPOSE 53/udp 53/tcp
+COPY zone/l1-6.ephec-ti.be /etc/bind/master/l1-6.ephec-ti.be
