--- a/dmz/soa_externe/named.conf
+++ b/dmz/soa_externe/named.conf
@@ -2,13 +2,12 @@ options {
         directory "/var/cache/bind";                                                  
                                                                                      
         // Configure the IPs to listen on here.                                      
-        listen-on { 192.168.8.2; };                                            
+        listen-on { any; };                                            
         listen-on-v6 { none; };                                                 
                                                                                 
         // If you want to allow only specific hosts to use the DNS server:           
         allow-query {                                                                
-                192.168.8.0/24;
-				192.168.0.0/24; 				
+                any; 				
         };                                                                      
                                                                                 
         // Specify a list of IPs/masks to allow zone transfers to here.              
@@ -33,15 +32,9 @@ options {
         recursion no;                                                  
 };                                                                     
                                                                        
-key "rndc-key" {                                                          
-        algorithm hmac-sha256;                                            
-        secret "uLs91m094939EERqD+QRb61zeRmSPC7+n8GihJF4Teg=";         
-};   
-
    
                                                                     
-zone "l1-6.ephecti.be" IN{                                         
-        type master ;                                                  
-        file "/etc/bind/master/l1-6.ephecti.be";                
-        allow-update { key rndc-key; };     
-};                     
+zone "l1-6.ephecti.be"{                                         
+        type master;                                                  
+        file "/etc/bind/master/l1-6.ephec-ti.be";
+};
