--- a/resolver/named.conf
+++ b/resolver/named.conf
@@ -1,49 +1,27 @@
 options {                                                                               
         directory "/var/cache/bind";                                                          
-                                                                                        
-        // Specify a list of CIDR masks which should be allowed to issue recursive   
-        // queries to the DNS server. Do NOT specify 0.0.0.0/0 here; see above.       
+     
+        //  autorise la récurion sur cette interface    
         allow-recursion {                                                               
                 192.168.8.0/24;                                                         
         };                                                                           
                                                                                      
-        // If you want this resolver to itself resolve via means of another recursive 
-        // resolver, uncomment this block and specify the IP addresses of the desired   
-        // upstream resolvers.                                                          
-        //forwarders {                                                                  
-        //      123.123.123.123;                                                        
-        //      123.123.123.123;                                                      
-        //};                                                                            
+                                                                      
                                                                                         
-        // By default the resolver will attempt to perform recursive resolution itself
-        // if the forwarders are unavailable. If you want this resolver to fail outright
-        // if the upstream resolvers are unavailable, uncomment this directive.         
-        //forward only;                                                                 
-                                                                                        
-        // Configure the IPs to listen on here.                                      
+        // Configuration des ip sur les quelles écouter                                 
         listen-on port 53 {any; };                                                   
         listen-on-v6 { none; };                                                       
-                                                                                        
-        // If you have problems and are behind a firewall:                           
-        //query-source address * port 53;                                            
-                                                                                     
+                                                                                                                            
         pid-file "/var/run/named/named.pid";                                          
                                                                                         
-        // Removing this block will cause BIND to revert to its default behaviour       
-        // of allowing zone transfers to any host (!). There is no need to allow zone
-        // transfers when operating as a recursive resolver.                         
-        allow-transfer { none; };                                                     
+        
+        // Gestion des transferts                       
+        allow-transfer { none; };       
+        //activer ou non la validation dnssec(qui résous les problème de sécurité du dns)		
         dnssec-validation no;                                                           
         dnssec-enable no;                                                               
                                                                                      
-};
-
-
-//zone "." IN {                                                                           
-  //      type hint;                                                                      
-    //    file "named.ca";                                                                
-
-//};                                                                                    
+};                                                                              
                                                                                         
 zone "localhost" IN {                                                                   
         type master;                                                                  
@@ -57,14 +35,17 @@ zone "127.in-addr.arpa" IN {
         file "pri/127.zone";                                                            
         allow-update { none; };                                                      
         notify no;                                                                   
-};                                                                                   
+};  
+  
+// déclaration de notre zone interne                                                                                
 zone "8.168.192.in-addr.arpa" {                                                                
         type forward;                                                                   
         forwarders { 192.168.8.2 ;};                                                    
         forward only ;                                                               
-};                                                                                   
-                                                                                      
-zone "intranet.ephecti.be" {                                                         
+};    
+                                                                               
+// déclaration de notre zone reverse                                                                            
+zone "intranet" {                                                         
         type forward;                                                                   
         forwarders { 192.168.8.2 ;};                                                 
         forward only ;                                                            
