--- a/soa/named.conf
+++ b/soa/named.conf
@@ -1,34 +1,25 @@
 options {                                                                       
         directory "/var/cache/bind";                                                  
                                                                                      
-        // Configure the IPs to listen on here.                                      
+        // Configurer les ip sur les quelles écouter                                    
         listen-on { 192.168.8.2; };                                            
         listen-on-v6 { none; };                                                 
                                                                                 
-        // If you want to allow only specific hosts to use the DNS server:           
+        // Configurer les hotes autorisés a utiliser le serveur DNS           
         allow-query {                                                                
                 192.168.8.0/24;
 				192.168.0.0/24; 				
         };                                                                      
-                                                                                
-        // Specify a list of IPs/masks to allow zone transfers to here.              
-        //                                                                           
-        // You can override this on a per-zone basis by specifying this inside a zone
-        // block.                                                               
-        //                                                                      
-        // Warning: Removing this block will cause BIND to revert to its default     
-        //          behaviour of allowing zone transfers to any host (!).            
+    
+        // Gestion des transferts              
         allow-transfer {                                                             
                 none;                                                           
         };                                                                      
                                                                                      
-        // If you have problems and are behind a firewall:                           
-        //query-source address * port 53;                                 
-                                                                                
+                                           
         pid-file "/var/run/named/named.pid";                                         
                                                                          
-        // Changing this is NOT RECOMMENDED; see the notes above and in
-        // named.conf.recursive.                                                
+        // Gestion de la récurion                                              
         allow-recursion { none; };                                        
         recursion no;                                                  
 };                                                                     
@@ -39,14 +30,16 @@ key "rndc-key" {
 };   
 
    
+//Zone interne
 zone "8.168.192.in-addr.arpa" IN {                                                       
         type master ;                                                     
         file "/etc/bind/master/8.168.192.in-addr.arpa";                         
         allow-update { key rndc-key; };                                
 };                                          
-                                                                          
-zone "intranet.ephecti.be" IN{                                         
+             
+//zone reverse			 
+zone "intranet"{                                         
         type master ;                                                  
-        file "/etc/bind/master/intranet.ephecti.be";                
+        file "/etc/bind/master/intranet";                
         allow-update { key rndc-key; };     
 };                     
