gestion erreur service interne

--- a/dmz/soa_externe/named.conf
+++ b/dmz/soa_externe/named.conf
@@ -34,7 +34,7 @@ options {
                                                                        
    
                                                                     
-zone "l1-6.ephecti.be"{                                         
+zone "l1-6.ephec-ti.be"{                                         
         type master;                                                  
         file "/etc/bind/master/l1-6.ephec-ti.be";
 };
