--- a/dmz/soa_externe/Dockerfile
+++ b/dmz/soa_externe/Dockerfile
@@ -6,4 +6,4 @@ RUN apt-get install curl -y
 
 WORKDIR /etc/bind
 COPY named.conf /etc/bind/named.conf
-COPY zone/l1-6.ephec-ti.be /etc/bind/master/l1-6.ephec-ti.be
+COPY zone/l1-6.ephec-ti.be /etc/bind/l1-6.ephec-ti.be
