--- a/dmz/soa_externe/named.conf
+++ b/dmz/soa_externe/named.conf
@@ -36,5 +36,5 @@ options {
                                                                     
 zone "l1-6.ephec-ti.be"{                                         
         type master;                                                  
-        file "/etc/bind/master/l1-6.ephec-ti.be";
+        file "/etc/bind/l1-6.ephec-ti.be";
 };
