--- a/dmz/docker-compose.yml
+++ b/dmz/docker-compose.yml
@@ -27,7 +27,7 @@ services:
           ipv4_address: 192.168.7.2
     volumes:
       - ./soa_externe/named.conf:/etc/bind/named.conf
-      - ./soa_externe/zone/l1-6.ephec-ti.be:/etc/bind/master/l1-6.ephec-ti.be
+      - ./soa_externe/zone/l1-6.ephec-ti.be:/etc/bind/l1-6.ephec-ti.be
     container_name: soa_externe
     
     command: "named -c /etc/bind/named.conf -g"
