--- a/dmz/soa_externe/Dockerfile
+++ b/dmz/soa_externe/Dockerfile
@@ -1,9 +1,12 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get install -y bind9
-RUN apt-get update && apt-get install -y 
+
+RUN apt update && apt upgrade -y && apt install bind9 bind9utils dnsutils  -y
 RUN apt-get install curl -y
 
-WORKDIR /etc/bind
+
+
 COPY named.conf /etc/bind/named.conf
-COPY zone/l1-6.ephec-ti.be /etc/bind/l1-6.ephec-ti.be
+COPY named.conf.local /etc/bind/named.conf.local
+COPY named.conf.option /etc/bind/named.conf.option
+COPY zone/l1-6.ephec-ti.be /etc/bind/zones/db.l1-6.ephec-ti.be
