--- a/dmz/docker-compose.yml
+++ b/dmz/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   web:
     build: ./web/.
     ports:
-      - 8080:80
+      - "80:80"
     networks:
       reseau_dmz:
           ipv4_address: 192.168.7.1
@@ -21,13 +21,16 @@ services:
   soa_externe:
     build: ./soa_externe/.
     ports:
-      - 53:53
+      - "53:53/udp"
+      - "53:53/tcp"
     networks:
       reseau_dmz:
           ipv4_address: 192.168.7.2
     volumes:
       - ./soa_externe/named.conf:/etc/bind/named.conf
-      - ./soa_externe/zone/l1-6.ephec-ti.be:/etc/bind/l1-6.ephec-ti.be
+      - ./soa_externe/named.conf.local:/etc/bind/named.conf.local
+      - ./soa_externe/named.conf.option:/etc/bind/named.conf.option
+      - ./soa_externe/zone/l1-6.ephec-ti.be:/etc/bind/zones/db.l1-6.ephec-ti.be
     container_name: soa_externe
     
     command: "named -c /etc/bind/named.conf -g"
