--- a/dmz/soa_externe/named.conf
+++ b/dmz/soa_externe/named.conf
@@ -1,40 +1,6 @@
-options {                                                                       
-        directory "/var/cache/bind";                                                  
-                                                                                     
-        // Configure the IPs to listen on here.                                      
-        listen-on { any; };                                            
-        listen-on-v6 { none; };                                                 
-                                                                                
-        // If you want to allow only specific hosts to use the DNS server:           
-        allow-query {                                                                
-                any; 				
-        };                                                                      
-                                                                                
-        // Specify a list of IPs/masks to allow zone transfers to here.              
-        //                                                                           
-        // You can override this on a per-zone basis by specifying this inside a zone
-        // block.                                                               
-        //                                                                      
-        // Warning: Removing this block will cause BIND to revert to its default     
-        //          behaviour of allowing zone transfers to any host (!).            
-        allow-transfer {                                                             
-                none;                                                           
-        };                                                                      
-                                                                                     
-        // If you have problems and are behind a firewall:                           
-        //query-source address * port 53;                                 
-                                                                                
-        pid-file "/var/run/named/named.pid";                                         
-                                                                         
-        // Changing this is NOT RECOMMENDED; see the notes above and in
-        // named.conf.recursive.                                                
-        allow-recursion { none; };                                        
-        recursion no;                                                  
-};                                                                     
-                                                                       
-   
-                                                                    
-zone "l1-6.ephec-ti.be"{                                         
-        type master;                                                  
-        file "/etc/bind/l1-6.ephec-ti.be";
-};
+include "/etc/bind/named.conf.options";
+#Ce fichier contient l'ensemble des options de configuration du serveur DNS. 
+
+include "/etc/bind/named.conf.local";
+#contient la configuration du serveur DNS, et c'est ici que vous déclarez les zones associées au domaine.
+
