ajouts des commentaires web externe

--- a/dmz/web/apache2.conf
+++ b/dmz/web/apache2.conf
@@ -1,10 +1,10 @@
 #configuration principale
-Mutex file:${APACHE_LOCK_DIR} default
-PidFile ${APACHE_PID_FILE}
-Timeout 300
-KeepAlive On
-MaxKeepAliveRequests 100
-KeepAliveTimeout 5
+Mutex file:${APACHE_LOCK_DIR} default #permet de définir le mécanisme de mutex et d'un choix d'un autre répertoire utilisé par les mutex
+PidFile ${APACHE_PID_FILE}  #PidFile est le nom du fichier dans lequel le serveur enregistre son identifiant de processus
+Timeout 300                 # définit la durée, exprimée en secondes, pendant laquelle le serveur attend des réceptions et des émissions pendant les communications
+KeepAlive On                # fonction qui permet de maintenir un réseau jusqu'à la rupture de connexion côté client ou côté serveur
+MaxKeepAliveRequests 100    # Cette directive définit le nombre maximum de requêtes autorisées par connexion persistante
+KeepAliveTimeout 5          # définit la durée exprimée en secondes pendant laquelle le serveur attend après avoir servi une requête, avant d'interrompre la connexion.
 
 
 # paramètre a définir dans :/etc/apache2/envvars
@@ -16,7 +16,7 @@ HostnameLookups Off
 
 #emplacement du fichier de logs
 ErrorLog ${APACHE_LOG_DIR}/error.log
-LogLevel warn
+LogLevel warn     #définir le niveau de sévérité des logs
 
 # Include module configuration:
 IncludeOptional mods-enabled/*.load
@@ -28,12 +28,12 @@ Include ports.conf
 
 # Sets the default security model of the Apache2 HTTPD server.
 <Directory />
-        AllowOverride None
+        AllowOverride None      # définit si les fichiers .htaccess doivent être pris en compte
         Require all denied
 </Directory>
 
 <Directory /usr/share>
-        AllowOverride None
+        AllowOverride None      # définit si les fichiers .htaccess doivent être pris en compte
         Require all granted
 </Directory>
 
@@ -41,7 +41,7 @@ Include ports.conf
 #Dossier pour le répertoire web
 <Directory /var/www/>
         Options Indexes FollowSymLinks
-        AllowOverride None
+        AllowOverride None     # définit si les fichiers .htaccess doivent être pris en compte
         Require all granted
 </Directory>
 
@@ -76,11 +76,9 @@ IncludeOptional sites-enabled/*.conf
 
 # Permet de créer un hote virtuel www
 <VirtualHost *:80> 
-	#nom du serveur
-	ServerName www.l1-6.ephec-ti.be
-	ServerAdmin he201885@students.ephec.be
-	#répertoire de stockage des fichiers
-	DocumentRoot /var/www/html
+	ServerName www.l1-6.ephec-ti.be                     #nom du serveur
+	ServerAdmin he201885@students.ephec.be              #administrateur du site 
+	DocumentRoot /var/www/html                          #répertoire de stockage des fichiers
 
 	#stockage des logs 
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
@@ -88,9 +86,9 @@ IncludeOptional sites-enabled/*.conf
 	
 	<Directory /var/www/html>
 		Options Indexes FollowSymLinks
-		AllowOverride None
-		Order allow,deny
-		allow from all
+		AllowOverride None                         # définit si les fichiers .htaccess doivent être pris en compte
+		Order allow,deny                           # les règles allow seront traitées avant les règles deny
+		allow from all                             # tout le monde peut accèder au site
 	</Directory>
 	
 
@@ -99,11 +97,9 @@ IncludeOptional sites-enabled/*.conf
 
 # Permet de créer un hote virtuel b2b
 <VirtualHost *:80>
-    #nom du serveur
-	ServerName b2b.l1-6.ephec-ti.be
-	ServerAdmin he201885@students.ephec.be
-	#répertoire de stockage des fichiers
-	DocumentRoot /var/www/b2b
+	ServerName b2b.l1-6.ephec-ti.be                #nom du serveur
+	ServerAdmin he201885@students.ephec.be         #administrateur du site 
+	DocumentRoot /var/www/b2b                      #répertoire de stockage des fichiers
 
 	#stockage des logs 
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
@@ -111,7 +107,7 @@ IncludeOptional sites-enabled/*.conf
 	
 	<Directory /var/www/b2b>
 		Options -Indexes +FollowSymLinks
-		AllowOverride All
+		AllowOverride All                      # définit si les fichiers .htaccess doivent être pris en compte
 	</Directory>
 
 </VirtualHost>
