--- a/erp/apache2.conf
+++ b/erp/apache2.conf
@@ -1,19 +1,15 @@
-Mutex file:${APACHE_LOCK_DIR} default
+#configuration principale
+Mutex file:${APACHE_LOCK_DIR} default #permet de définir le mécanisme de mutex et d'un choix d'un autre répertoire utilisé par les mutex
+PidFile ${APACHE_PID_FILE}  #PidFile est le nom du fichier dans lequel le serveur enregistre son identifiant de processus
+Timeout 300                 # définit la durée, exprimée en secondes, pendant laquelle le serveur attend des réceptions et des émissions pendant les communications
+KeepAlive On                # fonction qui permet de maintenir un réseau jusqu'à la rupture de connexion côté client ou côté serveur
+MaxKeepAliveRequests 100    # Cette directive définit le nombre maximum de requêtes autorisées par connexion persistante
+KeepAliveTimeout 5          # définit la durée exprimée en secondes pendant laquelle le serveur attend après avoir servi une requête, avant d'interrompre la connexion.
 
-
-PidFile ${APACHE_PID_FILE}
-
-Timeout 300
-
-KeepAlive On
-
-MaxKeepAliveRequests 100
-
-KeepAliveTimeout 5
-
+# paramètre a définir dans :/etc/apache2/envvars
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
-
+#ne pas enregistrer les hostname des clients
 HostnameLookups Off
 
 # ErrorLog: localisation du fichier de log
@@ -29,20 +25,21 @@ IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
 Include ports.conf
 
+# Sets the default security model of the Apache2 HTTPD server.
 <Directory />
-        Options FollowSymLinks
+        Options FollowSymLinks     # définit si les fichiers .htaccess doivent être pris en compte
         AllowOverride All
         Require all denied
 </Directory>
 
 <Directory /usr/share>
-        AllowOverride All
+        AllowOverride All         # définit si les fichiers .htaccess doivent être pris en compte
         Require all granted
 </Directory>
 
 <Directory /var/www/>
         Options Indexes FollowSymLinks
-        AllowOverride All
+        AllowOverride All            # définit si les fichiers .htaccess doivent être pris en compte
         Require all granted
 </Directory>
 
@@ -52,6 +49,7 @@ ServerName erp.intranet.ephecti.be:8080
 # nom du fichier permettant de gèrer les accès
 AccessFileName .htaccess
 
+# empèche la visualisation des fichiers .htaccess par les clients
 <FilesMatch "^\.ht">
         Require all denied
 </FilesMatch>
@@ -63,6 +61,8 @@ LogFormat "%h %l %u %t \"%r\" %>s %O" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
 
+# Include generic snippets of statements
 IncludeOptional conf-enabled/*.conf
+# Include la configuration des virtualHost
 IncludeOptional sites-enabled/*.conf
 
