--- a/resolver/named.conf
+++ b/resolver/named.conf
@@ -1,5 +1,5 @@
 options {                                                                               
-        directory "/var/cache/bind";                                                          
+        directory "/var/cache/bind";             // Répertoire courant du serveur                                              
      
         //  autorise la récurion sur cette interface    
         allow-recursion {                                                               
@@ -17,7 +17,7 @@ options {
         
         // Gestion des transferts                       
         allow-transfer { none; };       
-        //activer ou non la validation dnssec(qui résous les problème de sécurité du dns)		
+        //désactivation de la validation dnssec
         dnssec-validation no;                                                           
         dnssec-enable no;                                                               
                                                                                      
@@ -39,14 +39,14 @@ zone "127.in-addr.arpa" IN {
   
 // déclaration de notre zone interne                                                                                
 zone "8.168.192.in-addr.arpa" {                                                                
-        type forward;                                                                   
-        forwarders { 192.168.8.2 ;};                                                    
-        forward only ;                                                               
+        type forward;                    //Type de dns                                                
+        forwarders { 192.168.8.2 ;};     // Adresse IP à laquelle il transmet ses requêtes                                               
+        forward only ;                   //le serveur ne transfert que les requètes dns                                            
 };    
                                                                                
 // déclaration de notre zone reverse                                                                            
 zone "intranet" {                                                         
-        type forward;                                                                   
-        forwarders { 192.168.8.2 ;};                                                 
-        forward only ;                                                            
+        type forward;                     //Type de dns                                              
+        forwarders { 192.168.8.2 ;};      // Adresse IP à laquelle il transmet ses requêtes                                             
+        forward only ;                    //le serveur ne transfert que les requètes dns                                         
 };  
