--- a/soa/named.conf
+++ b/soa/named.conf
@@ -1,5 +1,5 @@
 options {                                                                       
-        directory "/var/cache/bind";                                                  
+        directory "/var/cache/bind";   // Répertoire courant du serveur                                                 
                                                                                      
         // Configurer les ip sur les quelles écouter                                    
         listen-on { 192.168.8.2; };                                            
@@ -24,22 +24,17 @@ options {
         recursion no;                                                  
 };                                                                     
                                                                        
-key "rndc-key" {                                                          
-        algorithm hmac-sha256;                                            
-        secret "uLs91m094939EERqD+QRb61zeRmSPC7+n8GihJF4Teg=";         
-};   
+ 
 
    
 //Zone interne
 zone "8.168.192.in-addr.arpa" IN {                                                       
-        type master ;                                                     
-        file "/etc/bind/master/8.168.192.in-addr.arpa";                         
-        allow-update { key rndc-key; };                                
+        type master ;                                          //Type de dns                            
+        file "/etc/bind/master/8.168.192.in-addr.arpa";       //localisation de la Zone interne                                                  
 };                                          
              
 //zone reverse			 
 zone "intranet"{                                         
-        type master ;                                                  
-        file "/etc/bind/master/intranet";                
-        allow-update { key rndc-key; };     
+        type master ;                               //Type de dns                   
+        file "/etc/bind/master/intranet";           //localisation de la zone intranet     
 };                     
